force-app/main/default/objects/cazoomi__Marketing_List__c/cazoomi__Marketing_List__c.object-meta.xml
<CustomObject>
    <description>This object is used to store marketing list.</description>
    <label>Marketing List</label>
    <nameField>
        <label>Marketing List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>