force-app/main/default/objects/cazoomi__Marketing_List__c/fields/cazoomi__Sync_List__c.field-meta.xml
<CustomField>
    <fullName>cazoomi__Sync_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync This List</label>
    <type>Checkbox</type>
</CustomField>