force-app/main/default/objects/cazoomi__Marketing_List__c/fields/cazoomi__Total_Subscribed_Contacts__c.field-meta.xml
<CustomField>
    <fullName>cazoomi__Total_Subscribed_Contacts__c</fullName>
    <label>Total Subscribed Contacts</label>
    <summaryForeignKey>cazoomi__List_Member_Contact__c.cazoomi__Marketing_List__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>