force-app/main/default/objects/cazoomi__Marketing_List__c/fields/cazoomi__Total_Subscribed_Leads__c.field-meta.xml
<CustomField>
    <fullName>cazoomi__Total_Subscribed_Leads__c</fullName>
    <label>Total Subscribed Leads</label>
    <summaryForeignKey>cazoomi__List_Members_Lead__c.cazoomi__Marketing_List__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>