force-app/main/default/objects/cazoomi__Marketing_List__c/listViews/cazoomi__All.listView-meta.xml
<ListView>
    <fullName>cazoomi__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>